<resources>
    <string name="app_name">UNI_STUDENT</string>
    <string-array name="university_departments">
        <item>Uni Departments</item>
        <item>Department of Electrical Engineering</item>
        <item>Department of Mechanical Engineering</item>
        <item>Department of education</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_choose_course">ChooseCourseActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="aem">AEM</string>
    <string name="emailsignup">Email</string>
    <string name="passwordsignup">Password</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_aem">Enter your AEM</string>
</resources>