<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LoginTabFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/loginimg"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="300dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:padding="8dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/login_AEM"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_numbers_24"
                android:drawablePadding="8dp"
                android:hint="@string/aem"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="15sp" />
            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:text="Login"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:background="#ba160c"
                app:cornerRadius = "30dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>