<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SignupTabFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="820dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/signimg" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/emailsignup"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/passwordsignup"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_full_name"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/AEM_signup"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_numbers_24"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_aem"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/University_spinner"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:layout_marginTop="4dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#ba160c"
                android:gravity="center"
                android:text="Sign Up"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>